[gd_scene load_steps=24 format=2]

[ext_resource path="res://data/sprites/title_screen_5.png" type="Texture" id=1]
[ext_resource path="res://data/sprites/title_screen_6.png" type="Texture" id=2]
[ext_resource path="res://data/sprites/title_screen_7.png" type="Texture" id=3]
[ext_resource path="res://data/sprites/title_screen_8.png" type="Texture" id=4]
[ext_resource path="res://data/sprites/title_screen_9.png" type="Texture" id=5]
[ext_resource path="res://data/sprites/title_screen_18.png" type="Texture" id=6]
[ext_resource path="res://data/sprites/title_screen_19.png" type="Texture" id=7]
[ext_resource path="res://data/sprites/title_screen_20.png" type="Texture" id=8]
[ext_resource path="res://data/sprites/title_screen_14.png" type="Texture" id=9]
[ext_resource path="res://data/sprites/title_screen_15.png" type="Texture" id=10]
[ext_resource path="res://data/sprites/title_screen_16.png" type="Texture" id=11]
[ext_resource path="res://data/sprites/title_screen_17.png" type="Texture" id=12]
[ext_resource path="res://data/sprites/title_screen_2.png" type="Texture" id=13]
[ext_resource path="res://data/sprites/title_screen_3.png" type="Texture" id=14]
[ext_resource path="res://data/sprites/title_screen_4.png" type="Texture" id=15]
[ext_resource path="res://data/sprites/title_screen_1.png" type="Texture" id=16]
[ext_resource path="res://data/sprites/title_screen_10.png" type="Texture" id=17]
[ext_resource path="res://data/sprites/title_screen_12.png" type="Texture" id=18]
[ext_resource path="res://data/sprites/title_screen_13.png" type="Texture" id=19]
[ext_resource path="res://data/sprites/title_screen_11.png" type="Texture" id=20]
[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=21]
[ext_resource path="res://data/themes/theme.tres" type="Theme" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "loop",
"speed": 2.0
} ]

[node name="TitleScreen" type="Node2D"]
position = Vector2( 44, 25 )
script = ExtResource( 21 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -44.0
margin_top = -25.0
margin_right = 40.0
margin_bottom = 23.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -1 )
frames = SubResource( 1 )
frame = 19

[node name="CreditsLabel" type="Label" parent="."]
margin_left = -44.0
margin_right = 13.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 22 )
text = "Best score:
12345678"

[node name="StartTextContainer" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StartTextContainer"]
margin_left = -44.0
margin_top = 14.0
margin_right = 40.0
margin_bottom = 23.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="StartTextContainer"]
margin_left = -44.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 22 )
text = "Press  X  to start"
align = 1

[node name="CreditsTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="StartTextTimer" type="Timer" parent="."]
wait_time = 1.5
